# youtube_music_blend

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  scratch.ipynb
tests/: test_utils.py
ytmb/: __main__.py  authentication.py  automation.py  config.yml  exploration.py  playlists.py  transformations.py  ui.py  utils.py
ytmb/menus/: advanced.py  blend.py  compilation.py  mixtape.py  routines.py  tracking.py  users.py
